{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 47,
  "lineage": "c746fffc-6770-2b59-c8aa-2e6ba5176d03",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mes_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0734a81f8d329e748",
            "arn": "arn:aws:ec2:us-east-1:474668390798:elastic-ip/eipalloc-0734a81f8d329e748",
            "association_id": "eipassoc-0bec6738b697a32ed",
            "domain": "vpc",
            "id": "eipalloc-0734a81f8d329e748",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b82bf5febf15371a",
            "private_dns": "ip-10-0-1-48.ec2.internal",
            "private_ip": "10.0.1.48",
            "public_dns": "ec2-18-207-51-7.compute-1.amazonaws.com",
            "public_ip": "18.207.51.7",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mes-nat-eip"
            },
            "tags_all": {
              "Name": "mes-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mes_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668390798:internet-gateway/igw-080176b692f3359f7",
            "id": "igw-080176b692f3359f7",
            "owner_id": "474668390798",
            "tags": {
              "Name": "mes-igw"
            },
            "tags_all": {
              "Name": "mes-igw"
            },
            "vpc_id": "vpc-04696209199a18a38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mes_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:474668390798:loadbalancer/app/mes-alb/8703bfae41b11af7",
            "arn_suffix": "app/mes-alb/8703bfae41b11af7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mes-alb-1116181053.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:474668390798:loadbalancer/app/mes-alb/8703bfae41b11af7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mes-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08dea016f74aa8813"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-021634fba6d951c8f"
              },
              {
                "subnet_id": "subnet-0713e0d5ebcac0d18"
              }
            ],
            "subnets": [
              "subnet-021634fba6d951c8f",
              "subnet-0713e0d5ebcac0d18"
            ],
            "tags": {
              "Name": "mes-alb"
            },
            "tags_all": {
              "Name": "mes-alb"
            },
            "vpc_id": "vpc-04696209199a18a38",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.mes_alb_sg",
            "aws_subnet.mes_public_subnet_1",
            "aws_subnet.mes_public_subnet_2",
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mes_backend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:474668390798:listener/app/mes-alb/8703bfae41b11af7/2ca52f494dda9a0b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:474668390798:targetgroup/mes-frontend-tg/58c37f47b4951677",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:474668390798:listener/app/mes-alb/8703bfae41b11af7/2ca52f494dda9a0b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:474668390798:loadbalancer/app/mes-alb/8703bfae41b11af7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.mes_alb",
            "aws_lb_target_group.mes_frontend_tg",
            "aws_security_group.mes_alb_sg",
            "aws_subnet.mes_public_subnet_1",
            "aws_subnet.mes_public_subnet_2",
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "mes_backend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:474668390798:targetgroup/mes-backend-tg/5662d83684991bca",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:474668390798:listener-rule/app/mes-alb/8703bfae41b11af7/2ca52f494dda9a0b/cf418b998eae60e6",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:474668390798:listener-rule/app/mes-alb/8703bfae41b11af7/2ca52f494dda9a0b/cf418b998eae60e6",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:474668390798:listener/app/mes-alb/8703bfae41b11af7/2ca52f494dda9a0b",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.mes_alb",
            "aws_lb_listener.mes_backend_listener",
            "aws_lb_target_group.mes_backend_tg",
            "aws_lb_target_group.mes_frontend_tg",
            "aws_security_group.mes_alb_sg",
            "aws_subnet.mes_public_subnet_1",
            "aws_subnet.mes_public_subnet_2",
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mes_backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:474668390798:targetgroup/mes-backend-tg/5662d83684991bca",
            "arn_suffix": "targetgroup/mes-backend-tg/5662d83684991bca",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:474668390798:targetgroup/mes-backend-tg/5662d83684991bca",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:474668390798:loadbalancer/app/mes-alb/8703bfae41b11af7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mes-backend-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04696209199a18a38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mes_frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:474668390798:targetgroup/mes-frontend-tg/58c37f47b4951677",
            "arn_suffix": "targetgroup/mes-frontend-tg/58c37f47b4951677",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:474668390798:targetgroup/mes-frontend-tg/58c37f47b4951677",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:474668390798:loadbalancer/app/mes-alb/8703bfae41b11af7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mes-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04696209199a18a38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mes_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0734a81f8d329e748",
            "association_id": "eipassoc-0bec6738b697a32ed",
            "connectivity_type": "public",
            "id": "nat-025aeff36138777d9",
            "network_interface_id": "eni-0b82bf5febf15371a",
            "private_ip": "10.0.1.48",
            "public_ip": "18.207.51.7",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-021634fba6d951c8f",
            "tags": {
              "Name": "mes-nat-gw"
            },
            "tags_all": {
              "Name": "mes-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mes_nat_eip",
            "aws_internet_gateway.mes_igw",
            "aws_subnet.mes_public_subnet_1",
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mes_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668390798:route-table/rtb-0efbab7f520d43eab",
            "id": "rtb-0efbab7f520d43eab",
            "owner_id": "474668390798",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-025aeff36138777d9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mes-private-rt"
            },
            "tags_all": {
              "Name": "mes-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04696209199a18a38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mes_nat_eip",
            "aws_internet_gateway.mes_igw",
            "aws_nat_gateway.mes_nat_gw",
            "aws_subnet.mes_public_subnet_1",
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mes_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668390798:route-table/rtb-0130089edf64790f5",
            "id": "rtb-0130089edf64790f5",
            "owner_id": "474668390798",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-080176b692f3359f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mes-public-rt"
            },
            "tags_all": {
              "Name": "mes-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04696209199a18a38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.mes_igw",
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mes_private_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035906a52b808b8a3",
            "route_table_id": "rtb-0efbab7f520d43eab",
            "subnet_id": "subnet-0ea3ff92c487d3059"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mes_nat_eip",
            "aws_internet_gateway.mes_igw",
            "aws_nat_gateway.mes_nat_gw",
            "aws_route_table.mes_private_rt",
            "aws_subnet.mes_private_subnet_1",
            "aws_subnet.mes_public_subnet_1",
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mes_private_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0322c4b1ff9d239cd",
            "route_table_id": "rtb-0efbab7f520d43eab",
            "subnet_id": "subnet-010109f99b88db69c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mes_nat_eip",
            "aws_internet_gateway.mes_igw",
            "aws_nat_gateway.mes_nat_gw",
            "aws_route_table.mes_private_rt",
            "aws_subnet.mes_private_subnet_2",
            "aws_subnet.mes_public_subnet_1",
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mes_public_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088c1bee55c805840",
            "route_table_id": "rtb-0130089edf64790f5",
            "subnet_id": "subnet-021634fba6d951c8f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.mes_igw",
            "aws_route_table.mes_public_rt",
            "aws_subnet.mes_public_subnet_1",
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mes_public_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbd502ca5597a220",
            "route_table_id": "rtb-0130089edf64790f5",
            "subnet_id": "subnet-0713e0d5ebcac0d18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.mes_igw",
            "aws_route_table.mes_public_rt",
            "aws_subnet.mes_public_subnet_2",
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mes_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668390798:security-group/sg-08dea016f74aa8813",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08dea016f74aa8813",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mes-alb-sg20250809080202564500000004",
            "name_prefix": "mes-alb-sg",
            "owner_id": "474668390798",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mes-alb-sg"
            },
            "tags_all": {
              "Name": "mes-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04696209199a18a38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mes_ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668390798:security-group/sg-050fa6cb1857982b7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050fa6cb1857982b7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08dea016f74aa8813"
                ],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08dea016f74aa8813"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mes-ecs-sg20250809080207972300000006",
            "name_prefix": "mes-ecs-sg",
            "owner_id": "474668390798",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mes-ecs-sg"
            },
            "tags_all": {
              "Name": "mes-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04696209199a18a38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.mes_alb_sg",
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mes_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668390798:security-group/sg-035c0dd4e4fc6b73e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035c0dd4e4fc6b73e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "mes-rds-sg20250809080202546500000002",
            "name_prefix": "mes-rds-sg",
            "owner_id": "474668390798",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mes-rds-sg"
            },
            "tags_all": {
              "Name": "mes-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04696209199a18a38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mes_redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668390798:security-group/sg-08f9a159885663e07",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f9a159885663e07",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "mes-redis-sg20250809080202560900000003",
            "name_prefix": "mes-redis-sg",
            "owner_id": "474668390798",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mes-redis-sg"
            },
            "tags_all": {
              "Name": "mes-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04696209199a18a38"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mes_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668390798:subnet/subnet-0ea3ff92c487d3059",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea3ff92c487d3059",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474668390798",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mes-private-subnet-1"
            },
            "tags_all": {
              "Name": "mes-private-subnet-1"
            },
            "vpc_id": "vpc-04696209199a18a38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mes_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668390798:subnet/subnet-010109f99b88db69c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010109f99b88db69c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474668390798",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mes-private-subnet-2"
            },
            "tags_all": {
              "Name": "mes-private-subnet-2"
            },
            "vpc_id": "vpc-04696209199a18a38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mes_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668390798:subnet/subnet-021634fba6d951c8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021634fba6d951c8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "474668390798",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mes-public-subnet-1"
            },
            "tags_all": {
              "Name": "mes-public-subnet-1"
            },
            "vpc_id": "vpc-04696209199a18a38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mes_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668390798:subnet/subnet-0713e0d5ebcac0d18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0713e0d5ebcac0d18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "474668390798",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mes-public-subnet-2"
            },
            "tags_all": {
              "Name": "mes-public-subnet-2"
            },
            "vpc_id": "vpc-04696209199a18a38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.mes_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mes_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474668390798:vpc/vpc-04696209199a18a38",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04bee51c0ce407dbf",
            "default_route_table_id": "rtb-0e99fbd06a38f954e",
            "default_security_group_id": "sg-057983b485957d25e",
            "dhcp_options_id": "dopt-0309f34ac7a67bee8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04696209199a18a38",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e99fbd06a38f954e",
            "owner_id": "474668390798",
            "tags": {
              "Name": "mes-vpc"
            },
            "tags_all": {
              "Name": "mes-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}